--- a/archives/toutiao-search/2024-04-11.md
+++ b/archives/toutiao-search/2024-04-11.md
@@ -1,60 +1,76 @@
 # 2024-04-11
 
-共 273 条
+共 289 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 11 2024 17:00:38 GMT+0800 (China Standard Time) -->
-1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
+<!-- 最后更新时间 Thu Apr 11 2024 18:00:37 GMT+0800 (China Standard Time) -->
 1. [长沙一私人影院被曝无底线陪侍](https://so.toutiao.com/search?keyword=长沙一私人影院被曝无底线陪侍)
-1. [渤海亿吨级油田开发建设启动](https://so.toutiao.com/search?keyword=渤海亿吨级油田开发建设启动)
 1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
-1. [媒体：全国二手房价泡沫基本消除](https://so.toutiao.com/search?keyword=媒体：全国二手房价泡沫基本消除)
-1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
-1. [学生嘲笑别人妈妈穿得丑 老师怒斥](https://so.toutiao.com/search?keyword=学生嘲笑别人妈妈穿得丑+老师怒斥)
-1. [律师谈私人影院陪侍：可判3年以上](https://so.toutiao.com/search?keyword=律师谈私人影院陪侍：可判3年以上)
-1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
-1. [女子养的宠物貂被家政放洗衣机洗了](https://so.toutiao.com/search?keyword=女子养的宠物貂被家政放洗衣机洗了)
+1. [渤海亿吨级油田开发建设启动](https://so.toutiao.com/search?keyword=渤海亿吨级油田开发建设启动)
+1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
+1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
+1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
+1. [外交部回应印度总理莫迪涉华表态](https://so.toutiao.com/search?keyword=外交部回应印度总理莫迪涉华表态)
+1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
+1. [医保部门从未规定单次住院不超15天](https://so.toutiao.com/search?keyword=医保部门从未规定单次住院不超15天)
+1. [余承东：鸿蒙智能座舱无需手机支架](https://so.toutiao.com/search?keyword=余承东：鸿蒙智能座舱无需手机支架)
 1. [金星宣布重新登记结婚](https://so.toutiao.com/search?keyword=金星宣布重新登记结婚)
-1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
+1. [媒体：全国二手房价泡沫基本消除](https://so.toutiao.com/search?keyword=媒体：全国二手房价泡沫基本消除)
 1. [北京一二代社保卡将停用？假的](https://so.toutiao.com/search?keyword=北京一二代社保卡将停用？假的)
 1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
-1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
-1. [马英九结束大陆参访行程返台](https://so.toutiao.com/search?keyword=马英九结束大陆参访行程返台)
+1. [幼师被指插足家庭遭拉横幅 园方回应](https://so.toutiao.com/search?keyword=幼师被指插足家庭遭拉横幅+园方回应)
+1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
+1. [菲律宾民众：我们不是中国的敌人](https://so.toutiao.com/search?keyword=菲律宾民众：我们不是中国的敌人)
+1. [中方反制参与对台售武的相关美企](https://so.toutiao.com/search?keyword=中方反制参与对台售武的相关美企)
+1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
+1. [学生嘲笑别人妈妈穿得丑 老师怒斥](https://so.toutiao.com/search?keyword=学生嘲笑别人妈妈穿得丑+老师怒斥)
+1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
 1. [跑滴滴的小米SU7车牌未取得运输证](https://so.toutiao.com/search?keyword=跑滴滴的小米SU7车牌未取得运输证)
+1. [男子做公益自费装路灯被责令拆除](https://so.toutiao.com/search?keyword=男子做公益自费装路灯被责令拆除)
+1. [律师谈私人影院陪侍：可判3年以上](https://so.toutiao.com/search?keyword=律师谈私人影院陪侍：可判3年以上)
+1. [马英九结束大陆参访行程返台](https://so.toutiao.com/search?keyword=马英九结束大陆参访行程返台)
+1. [美防长：我是俄罗斯人也不愿乌入约](https://so.toutiao.com/search?keyword=美防长：我是俄罗斯人也不愿乌入约)
+1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
+1. [深圳景区海上漂浮尸体 警方介入](https://so.toutiao.com/search?keyword=深圳景区海上漂浮尸体+警方介入)
+1. [女子养的宠物貂被家政放洗衣机洗了](https://so.toutiao.com/search?keyword=女子养的宠物貂被家政放洗衣机洗了)
+1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
+1. [生母虐待致残男童已用假肢正常走路](https://so.toutiao.com/search?keyword=生母虐待致残男童已用假肢正常走路)
+1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
+1. [烈士牺牲时手中紧握一张照片](https://so.toutiao.com/search?keyword=烈士牺牲时手中紧握一张照片)
+1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
+1. [代理农民工讨薪案的女律师被捕](https://so.toutiao.com/search?keyword=代理农民工讨薪案的女律师被捕)
+1. [武大开设雷军班100%保研](https://so.toutiao.com/search?keyword=武大开设雷军班100%保研)
+1. [襄阳首辆小米SU7车主受访时凡尔赛](https://so.toutiao.com/search?keyword=襄阳首辆小米SU7车主受访时凡尔赛)
+1. [儿子被打死的哈马斯领导人：不让步](https://so.toutiao.com/search?keyword=儿子被打死的哈马斯领导人：不让步)
+1. [洛阳百种牡丹竞相开放](https://so.toutiao.com/search?keyword=洛阳百种牡丹竞相开放)
+1. [女子银行转账等一个多小时急的大哭](https://so.toutiao.com/search?keyword=女子银行转账等一个多小时急的大哭)
+1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
+1. [泰国征兵抽签现场“小哥姐”的美貌](https://so.toutiao.com/search?keyword=泰国征兵抽签现场“小哥姐”的美貌)
+1. [女孩被拐15年养母家指责不知恩图报](https://so.toutiao.com/search?keyword=女孩被拐15年养母家指责不知恩图报)
+1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
 1. [金价连创历史新高后开始下跌](https://so.toutiao.com/search?keyword=金价连创历史新高后开始下跌)
+1. [胡锡进参加黄帝故里拜祖大典](https://so.toutiao.com/search?keyword=胡锡进参加黄帝故里拜祖大典)
+1. [16元凉菜仅一点黄瓜店家被顶格处罚](https://so.toutiao.com/search?keyword=16元凉菜仅一点黄瓜店家被顶格处罚)
+1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
+1. [女子向佛祖告状普陀山二次收费](https://so.toutiao.com/search?keyword=女子向佛祖告状普陀山二次收费)
+1. [重庆一高层居民楼起火暂无人员伤亡](https://so.toutiao.com/search?keyword=重庆一高层居民楼起火暂无人员伤亡)
+1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
 1. [余承东：新版智界S7开启海量交付](https://so.toutiao.com/search?keyword=余承东：新版智界S7开启海量交付)
 1. [女子出门摘楮不揪幸运捡到520元](https://so.toutiao.com/search?keyword=女子出门摘楮不揪幸运捡到520元)
-1. [儿子被打死的哈马斯领导人：不让步](https://so.toutiao.com/search?keyword=儿子被打死的哈马斯领导人：不让步)
-1. [代理农民工讨薪案的女律师被捕](https://so.toutiao.com/search?keyword=代理农民工讨薪案的女律师被捕)
-1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
-1. [女孩被拐15年养母家指责不知恩图报](https://so.toutiao.com/search?keyword=女孩被拐15年养母家指责不知恩图报)
-1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
-1. [幼师被指插足家庭遭拉横幅 园方回应](https://so.toutiao.com/search?keyword=幼师被指插足家庭遭拉横幅+园方回应)
 1. [律师：拍裸照女子或处至少5日行拘](https://so.toutiao.com/search?keyword=律师：拍裸照女子或处至少5日行拘)
-1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
 1. [原广州军区司令员李希林上将逝世](https://so.toutiao.com/search?keyword=原广州军区司令员李希林上将逝世)
 1. [问界新M7累计大定突破17.4万台](https://so.toutiao.com/search?keyword=问界新M7累计大定突破17.4万台)
 1. [女子做菜被呛哭丈夫急忙赶回家安慰](https://so.toutiao.com/search?keyword=女子做菜被呛哭丈夫急忙赶回家安慰)
-1. [襄阳首辆小米SU7车主受访时凡尔赛](https://so.toutiao.com/search?keyword=襄阳首辆小米SU7车主受访时凡尔赛)
-1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
 1. [5岁女孩与英歌队一起表演自信满满](https://so.toutiao.com/search?keyword=5岁女孩与英歌队一起表演自信满满)
 1. [江西宜丰回应医生参与代孕：已免职](https://so.toutiao.com/search?keyword=江西宜丰回应医生参与代孕：已免职)
-1. [女子向佛祖告状普陀山二次收费](https://so.toutiao.com/search?keyword=女子向佛祖告状普陀山二次收费)
-1. [胡锡进参加黄帝故里拜祖大典](https://so.toutiao.com/search?keyword=胡锡进参加黄帝故里拜祖大典)
 1. [《惜花芷》癫婆自有狠人治](https://so.toutiao.com/search?keyword=《惜花芷》癫婆自有狠人治)
-1. [深圳景区海上漂浮尸体 警方介入](https://so.toutiao.com/search?keyword=深圳景区海上漂浮尸体+警方介入)
 1. [媒体：“根浴”必须根治](https://so.toutiao.com/search?keyword=媒体：“根浴”必须根治)
-1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
 1. [黄金白银集体跳水](https://so.toutiao.com/search?keyword=黄金白银集体跳水)
 1. [大陆交流之旅令台生“深受震撼”](https://so.toutiao.com/search?keyword=大陆交流之旅令台生“深受震撼”)
-1. [烈士牺牲时手中紧握一张照片](https://so.toutiao.com/search?keyword=烈士牺牲时手中紧握一张照片)
-1. [医保部门从未规定单次住院不超15天](https://so.toutiao.com/search?keyword=医保部门从未规定单次住院不超15天)
-1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
 1. [教育部：治理7类隐蔽违规招生操作](https://so.toutiao.com/search?keyword=教育部：治理7类隐蔽违规招生操作)
 1. [女子因婆媳矛盾跳桥身亡？官方调查](https://so.toutiao.com/search?keyword=女子因婆媳矛盾跳桥身亡？官方调查)
 1. [李月汝错失留洋首冠](https://so.toutiao.com/search?keyword=李月汝错失留洋首冠)
 1. [武大开设雷军班 100%具备保研资格](https://so.toutiao.com/search?keyword=武大开设雷军班+100%具备保研资格)
-1. [重庆一高层居民楼起火暂无人员伤亡](https://so.toutiao.com/search?keyword=重庆一高层居民楼起火暂无人员伤亡)
 1. [多家银行三年期大额存单产品售罄](https://so.toutiao.com/search?keyword=多家银行三年期大额存单产品售罄)
 1. [退休公务员横漂演爹 片酬500到1000](https://so.toutiao.com/search?keyword=退休公务员横漂演爹+片酬500到1000)
 1. [小米回应车内摄像头能否关闭](https://so.toutiao.com/search?keyword=小米回应车内摄像头能否关闭)
