--- a/archives/toutiao-search/2024-04-11.md
+++ b/archives/toutiao-search/2024-04-11.md
@@ -1,54 +1,64 @@
 # 2024-04-11
 
-共 330 条
+共 338 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 11 2024 21:02:40 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 11 2024 22:00:42 GMT+0800 (China Standard Time) -->
 1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
 1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
 1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
 1. [中方反制参与对台售武的相关美企](https://so.toutiao.com/search?keyword=中方反制参与对台售武的相关美企)
-1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
-1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
-1. [外交部回应莫迪中印关系表态](https://so.toutiao.com/search?keyword=外交部回应莫迪中印关系表态)
-1. [哈马斯领导人得知儿孙身亡表现冷静](https://so.toutiao.com/search?keyword=哈马斯领导人得知儿孙身亡表现冷静)
-1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
 1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
-1. [菲总统去美国能换来什么实质支持](https://so.toutiao.com/search?keyword=菲总统去美国能换来什么实质支持)
-1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
-1. [特朗普在炸鸡店为全场买单](https://so.toutiao.com/search?keyword=特朗普在炸鸡店为全场买单)
-1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
-1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
-1. [李在明：选择我就是对尹锡悦的审判](https://so.toutiao.com/search?keyword=李在明：选择我就是对尹锡悦的审判)
-1. [台青：我们这代人定要把台湾带回家](https://so.toutiao.com/search?keyword=台青：我们这代人定要把台湾带回家)
-1. [台媒体人称马英九提抗日惹怒日学者](https://so.toutiao.com/search?keyword=台媒体人称马英九提抗日惹怒日学者)
-1. [余承东再提“轻舟已过万重山”](https://so.toutiao.com/search?keyword=余承东再提“轻舟已过万重山”)
-1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
-1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
-1. [18岁哥哥带着4岁妹妹打工相依为命](https://so.toutiao.com/search?keyword=18岁哥哥带着4岁妹妹打工相依为命)
+1. [外交部回应莫迪中印关系表态](https://so.toutiao.com/search?keyword=外交部回应莫迪中印关系表态)
+1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
+1. [台退将：两岸要和平统一](https://so.toutiao.com/search?keyword=台退将：两岸要和平统一)
+1. [哈马斯领导人得知儿孙身亡表现冷静](https://so.toutiao.com/search?keyword=哈马斯领导人得知儿孙身亡表现冷静)
+1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
+1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
 1. [中方回应美国“拉黑”4家中企](https://so.toutiao.com/search?keyword=中方回应美国“拉黑”4家中企)
-1. [菲律宾民众：我们不是中国的敌人](https://so.toutiao.com/search?keyword=菲律宾民众：我们不是中国的敌人)
-1. [“根浴”医院老板曾从富翁变老赖](https://so.toutiao.com/search?keyword=“根浴”医院老板曾从富翁变老赖)
-1. [余承东：鸿蒙智能座舱无需手机支架](https://so.toutiao.com/search?keyword=余承东：鸿蒙智能座舱无需手机支架)
-1. [驻菲使馆：望菲方重信守诺遵守共识](https://so.toutiao.com/search?keyword=驻菲使馆：望菲方重信守诺遵守共识)
-1. [重庆高楼起火疑因业主拜家神所致](https://so.toutiao.com/search?keyword=重庆高楼起火疑因业主拜家神所致)
-1. [武大开设雷军班100%保研](https://so.toutiao.com/search?keyword=武大开设雷军班100%保研)
-1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
-1. [乌方称基辅州最大热电站被俄军摧毁](https://so.toutiao.com/search?keyword=乌方称基辅州最大热电站被俄军摧毁)
-1. [岸田文雄与拜登就日铁收购案表态](https://so.toutiao.com/search?keyword=岸田文雄与拜登就日铁收购案表态)
-1. [男子在高架桥戴头盔趴在滑板上滑行](https://so.toutiao.com/search?keyword=男子在高架桥戴头盔趴在滑板上滑行)
-1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
-1. [退休公务员横漂演爹 片酬500到1000](https://so.toutiao.com/search?keyword=退休公务员横漂演爹+片酬500到1000)
-1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
+1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
+1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
+1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
+1. [台媒体人称马英九提抗日惹怒日学者](https://so.toutiao.com/search?keyword=台媒体人称马英九提抗日惹怒日学者)
+1. [特朗普在炸鸡店为全场买单](https://so.toutiao.com/search?keyword=特朗普在炸鸡店为全场买单)
+1. [18岁哥哥带着4岁妹妹打工相依为命](https://so.toutiao.com/search?keyword=18岁哥哥带着4岁妹妹打工相依为命)
+1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
 1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
-1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
+1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
+1. [二手房价泡沫消除 买房时机到了吗](https://so.toutiao.com/search?keyword=二手房价泡沫消除+买房时机到了吗)
+1. [余承东：纯燃油车非常不经济](https://so.toutiao.com/search?keyword=余承东：纯燃油车非常不经济)
+1. [“根浴”医院老板曾从富翁变老赖](https://so.toutiao.com/search?keyword=“根浴”医院老板曾从富翁变老赖)
+1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
+1. [余承东再提“轻舟已过万重山”](https://so.toutiao.com/search?keyword=余承东再提“轻舟已过万重山”)
+1. [台青：我们这代人定要把台湾带回家](https://so.toutiao.com/search?keyword=台青：我们这代人定要把台湾带回家)
+1. [A股今日走出独立行情](https://so.toutiao.com/search?keyword=A股今日走出独立行情)
+1. [500万的黄金和房产 20年后谁更值钱](https://so.toutiao.com/search?keyword=500万的黄金和房产+20年后谁更值钱)
+1. [菲律宾民众：我们不是中国的敌人](https://so.toutiao.com/search?keyword=菲律宾民众：我们不是中国的敌人)
+1. [美防长：我是俄罗斯人也不愿乌入约](https://so.toutiao.com/search?keyword=美防长：我是俄罗斯人也不愿乌入约)
+1. [退休公务员横漂演爹 片酬500到1000](https://so.toutiao.com/search?keyword=退休公务员横漂演爹+片酬500到1000)
+1. [重庆高楼起火疑因业主拜家神所致](https://so.toutiao.com/search?keyword=重庆高楼起火疑因业主拜家神所致)
 1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
+1. [李在明：选择我就是对尹锡悦的审判](https://so.toutiao.com/search?keyword=李在明：选择我就是对尹锡悦的审判)
+1. [小米SU7赛道首撞当事人发声](https://so.toutiao.com/search?keyword=小米SU7赛道首撞当事人发声)
 1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
+1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
+1. [武大开设雷军班100%保研](https://so.toutiao.com/search?keyword=武大开设雷军班100%保研)
+1. [菲渔民：中国海警没有伤害我们](https://so.toutiao.com/search?keyword=菲渔民：中国海警没有伤害我们)
+1. [烈士牺牲时手中紧握一张照片](https://so.toutiao.com/search?keyword=烈士牺牲时手中紧握一张照片)
+1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
+1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
+1. [男子在高架桥戴头盔趴在滑板上滑行](https://so.toutiao.com/search?keyword=男子在高架桥戴头盔趴在滑板上滑行)
+1. [原沈阳铁路局副局长江涛被查](https://so.toutiao.com/search?keyword=原沈阳铁路局副局长江涛被查)
+1. [余承东：鸿蒙智能座舱无需手机支架](https://so.toutiao.com/search?keyword=余承东：鸿蒙智能座舱无需手机支架)
+1. [各地举行活动欢庆“三月三”](https://so.toutiao.com/search?keyword=各地举行活动欢庆“三月三”)
+1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
+1. [乌方称基辅州最大热电站被俄军摧毁](https://so.toutiao.com/search?keyword=乌方称基辅州最大热电站被俄军摧毁)
+1. [女子高空抛粪被拘役3个月](https://so.toutiao.com/search?keyword=女子高空抛粪被拘役3个月)
+1. [菲总统去美国能换来什么实质支持](https://so.toutiao.com/search?keyword=菲总统去美国能换来什么实质支持)
+1. [驻菲使馆：望菲方重信守诺遵守共识](https://so.toutiao.com/search?keyword=驻菲使馆：望菲方重信守诺遵守共识)
+1. [岸田文雄与拜登就日铁收购案表态](https://so.toutiao.com/search?keyword=岸田文雄与拜登就日铁收购案表态)
 1. [俄军反击轰炸乌克兰发电厂](https://so.toutiao.com/search?keyword=俄军反击轰炸乌克兰发电厂)
 1. [16元凉菜仅一点黄瓜店家被顶格处罚](https://so.toutiao.com/search?keyword=16元凉菜仅一点黄瓜店家被顶格处罚)
-1. [烈士牺牲时手中紧握一张照片](https://so.toutiao.com/search?keyword=烈士牺牲时手中紧握一张照片)
-1. [500万的黄金和房产 20年后谁更值钱](https://so.toutiao.com/search?keyword=500万的黄金和房产+20年后谁更值钱)
-1. [女子高空抛粪被拘役3个月](https://so.toutiao.com/search?keyword=女子高空抛粪被拘役3个月)
 1. [乌军公布如何摧毁俄军目标视频](https://so.toutiao.com/search?keyword=乌军公布如何摧毁俄军目标视频)
 1. [华为公布HarmonyOS 4.2升级计划](https://so.toutiao.com/search?keyword=华为公布HarmonyOS+4.2升级计划)
 1. [财政部：推动家电等消费品以旧换新](https://so.toutiao.com/search?keyword=财政部：推动家电等消费品以旧换新)
@@ -67,7 +77,6 @@
 1. [男子无力还款轻生债权人起诉其家人](https://so.toutiao.com/search?keyword=男子无力还款轻生债权人起诉其家人)
 1. [香港特区政府一高官因病离世](https://so.toutiao.com/search?keyword=香港特区政府一高官因病离世)
 1. [小米回应车内摄像头能否关闭](https://so.toutiao.com/search?keyword=小米回应车内摄像头能否关闭)
-1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
 1. [乌称俄向乌发射40枚导弹40架无人机](https://so.toutiao.com/search?keyword=乌称俄向乌发射40枚导弹40架无人机)
 1. [男子做公益自费装路灯被责令拆除](https://so.toutiao.com/search?keyword=男子做公益自费装路灯被责令拆除)
 1. [泰国征兵抽签现场“小哥姐”的美貌](https://so.toutiao.com/search?keyword=泰国征兵抽签现场“小哥姐”的美貌)
@@ -94,7 +103,6 @@
 1. [学生嘲笑别人妈妈穿得丑 老师怒斥](https://so.toutiao.com/search?keyword=学生嘲笑别人妈妈穿得丑+老师怒斥)
 1. [律师谈私人影院陪侍：可判3年以上](https://so.toutiao.com/search?keyword=律师谈私人影院陪侍：可判3年以上)
 1. [马英九结束大陆参访行程返台](https://so.toutiao.com/search?keyword=马英九结束大陆参访行程返台)
-1. [美防长：我是俄罗斯人也不愿乌入约](https://so.toutiao.com/search?keyword=美防长：我是俄罗斯人也不愿乌入约)
 1. [儿子被打死的哈马斯领导人：不让步](https://so.toutiao.com/search?keyword=儿子被打死的哈马斯领导人：不让步)
 1. [洛阳百种牡丹竞相开放](https://so.toutiao.com/search?keyword=洛阳百种牡丹竞相开放)
 1. [女孩被拐15年养母家指责不知恩图报](https://so.toutiao.com/search?keyword=女孩被拐15年养母家指责不知恩图报)
